--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URL = 'mongodb+srv://aksharparekh401:12345@cluster0.ncwztql.mongodb.net/Blog'
+MONGODB_URL =mongodb+srv://aksharparekh401:12345@cluster0.ncwztql.mongodb.net/Blog
+
