--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
-  "dependencies": {
-    "cookie-parser": "^1.4.7",
-    "ejs": "^3.1.10",
-    "express": "^4.21.2",
-    "mongoose": "^8.18.0",
-    "multer": "^1.4.5-lts.1"
-  },
   "name": "blog",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
+  "type": "commonjs",
+  "description": "",
+  "author": "",
+  "license": "ISC",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "description": ""
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
+    "mongoose": "^8.18.0",
+    "multer": "^1.4.5-lts.1",
+    "debug": "^4.3.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
