--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "mongoose": "^8.18.0",
-    "multer": "^1.4.5-lts.1",
-    "debug": "^4.3.5"
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
